Fix background image and footer overflows

--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,7 @@ body {
   box-sizing: border-box;
   padding: 25px 50px 75px;
   background-image: url("./jon-moore-5fIoyoKlz7A-unsplash.jpg");
-  min-height: 98vh;
+  min-height: 96vh;
   background-size: cover;
   background-repeat: repeat-y;
 
@@ -214,7 +214,8 @@ input:placeholder-shown {
   position: absolute;
   bottom: 0;
   left: 0;
-  width: 100%;
+  box-sizing: border-box;
+  width: 100vw;
   padding: 15px;
 
   text-align: center;
